crates/cosmon-cli/tests/snapshots/help__archive_show.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Show the manifest + artifact inventory for one archived molecule

Usage: cs archive show [OPTIONS] <MOLECULE>

Arguments:
  <MOLECULE>  Molecule id or unique prefix

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
