crates/cosmon-cli/tests/snapshots/help__archive_verify.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Verify artifact hashes — exits non-zero if tampered

Usage: cs archive verify [OPTIONS] <MOLECULE>

Arguments:
  <MOLECULE>  Molecule id or unique prefix

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
