crates/cosmon-cli/tests/snapshots/help__collaboration_list.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
List every binding, active and revoked, without verifiers or proofs

Usage: cs collaboration list [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
