crates/cosmon-cli/tests/snapshots/help__collaboration_show.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Show one binding

Usage: cs collaboration show [OPTIONS] <ID>

Arguments:
  <ID>  Binding ID (cb-…)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
